<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="main_screen_app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="button_media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_address">www.tanya.01@gmail.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="unknown_artist">Неизвестный исполнитель</string>
    <string name="unknown_track">Неизвестный трек</string>
    <string name="unknown_time">–:––</string>
    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="unknown_album">Неизвестный альбом</string>
    <string name="unknown_year">Год неизвестен</string>
    <string name="unknown_genre">Жанр неизвестен</string>
    <string name="unknown_country">Страна неизвестна</string>
    <string name="zero_time">00:00</string>
    <string name="itunes_base_url">"https://itunes.apple.com"</string>
</resources>