<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextColor="?attr/colorOnPrimary"
        app:titleTextAppearance="@style/YS.Text.Medium.22"
        app:navigationIcon="@drawable/ic_back" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SettingItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_end_settings"
        android:text="@string/dark_theme"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingItems"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/share_the_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/write_to_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingItems"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/write_to_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingItems"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/user_agreement" />
</LinearLayout>