<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:paddingTop="14dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/YS.Text.Medium.22"
        android:text="@string/main_screen_app_name"
        android:textColor="?attr/colorOnSecondary" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ButtonMain"
            android:layout_marginTop="40dp"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/btn_media_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ButtonMain"
            android:layout_marginVertical="4dp"
            android:text="@string/button_media_library"
            app:icon="@drawable/ic_media_library" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ButtonMain"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />
</LinearLayout>