<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".search.ui.activity.SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/search"
        app:titleTextAppearance="@style/YS.Text.Medium.22"
        app:titleTextColor="?colorOnPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizontal">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_search_16x16"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="?attr/colorSearchText"
            android:textColorHint="?attr/colorSearchHint"
            android:textCursorDrawable="@drawable/cursor" />

        <ImageView
            android:id="@+id/clearSearchButton"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center_vertical"
            android:scaleType="center"
            android:src="@drawable/ic_clear"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/searchHistoryContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/search_history_title"
                style="@style/YS.Text.Medium.19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/search_history_title"
                android:textColor="?attr/colorOnPrimary" />
            <!--                android:visibility="gone"/>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackHistoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1" />
            <!--               tools:listitem="@layout/item_track" />-->
            <!--               android:layout_marginTop="92dp"-->

            <Button
                android:id="@+id/clearHistoryButton"
                style="@style/ButtonSecondary"
                android:layout_width="148dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="28dp"
                android:text="@string/clear_search_history" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"

            tools:listitem="@layout/item_track" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="148dp"
            android:indeterminateTint="@color/YP_blue"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/errorContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
           >

            <ImageView
                android:id="@+id/errorImageView"
                android:layout_width="@dimen/error_image_size"
                android:layout_height="@dimen/error_image_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="110dp"
                 />

            <TextView
                android:id="@+id/errorTextView"
                style="@style/YS.Text.Medium.19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary" />

            <Button
                android:id="@+id/retrySearchButton"
                style="@style/ButtonSecondary"
                android:layout_width="92dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/update" />
        </LinearLayout>


    </FrameLayout>

</LinearLayout>