<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="28dp"/>

   <ImageButton
       android:id="@+id/btn_back"
       android:layout_width="@dimen/button_back_size"
       android:layout_height="@dimen/button_back_size"
       app:srcCompat="@drawable/ic_back"
       android:background="@null"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_margin="4dp"/>

    <ImageView
        android:id="@+id/track_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintBottom_toTopOf="@id/name_of_track"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/placeholder"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/name_of_track"
        style="@style/YS.Text.Medium.22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Yesterday (Remastered 2009) ssssssssssssssssssssssss"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/track_image"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/name_of_artist"
        style="@style/YS.Text.Medium.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@id/name_of_track"
        tools:text="The Beatlessssssssssssssssssssssssssssssssssssssssssssssssssss"
        android:maxLines="1"
        android:ellipsize="end"
        />
    
    <ImageView
        android:id="@+id/btn_add_to_playlist"
        android:layout_width="@dimen/button_audio_player_size"
        android:layout_height="@dimen/button_audio_player_size"
        app:srcCompat="@drawable/btn_add_to_playlist"
        android:layout_marginTop="54dp"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@id/name_of_artist"
        app:layout_constraintEnd_toStartOf="@id/btn_play_and_pause"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />
    
    <ImageView
        android:id="@+id/btn_play_and_pause"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/btn_play"
        app:layout_constraintStart_toEndOf="@id/btn_add_to_playlist"
        app:layout_constraintTop_toBottomOf="@id/name_of_artist"
        app:layout_constraintEnd_toStartOf="@id/btn_like"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/btn_like"
        android:layout_width="@dimen/button_audio_player_size"
        android:layout_height="@dimen/button_audio_player_size"
        app:srcCompat="@drawable/btn_like_inactive"
        app:layout_constraintStart_toEndOf="@id/btn_play_and_pause"
        app:layout_constraintTop_toTopOf="@id/btn_add_to_playlist"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        android:layout_marginEnd="8dp" />
    
    <TextView
        android:id="@+id/current_time"
        android:textAppearance="@style/YS.Text.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_time"
        app:layout_constraintTop_toBottomOf="@id/btn_play_and_pause"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/duration"
        app:layout_constraintTag="duration"
        style="@style/YS.Text.Regular.13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@id/btn_play_and_pause"
        app:layout_constraintBottom_toTopOf="@id/album"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/time"
        style="@style/AudioPlayerInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="05:35"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintBottom_toBottomOf="@id/duration"
        app:layout_constraintStart_toStartOf="@id/barrier" />

    <TextView
        android:id="@+id/album"
        app:layout_constraintTag="album"
        style="@style/YS.Text.Regular.13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintBottom_toTopOf="@id/year"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/name_of_album"
        style="@style/AudioPlayerInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="name of albummmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintBottom_toBottomOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/barrier" />

    <TextView
        android:id="@+id/year"
        app:layout_constraintTag="year"
        style="@style/YS.Text.Regular.13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintBottom_toTopOf="@id/genre"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/name_of_year"
        style="@style/AudioPlayerInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1965"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/year"
        app:layout_constraintStart_toStartOf="@id/barrier" />

    <TextView
        android:id="@+id/genre"
        app:layout_constraintTag="genre"
        style="@style/YS.Text.Regular.13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintBottom_toTopOf="@id/country"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/name_of_genre"
        style="@style/AudioPlayerInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Rock"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/genre"
        app:layout_constraintStart_toStartOf="@id/barrier" />

    <TextView
        android:id="@+id/country"
        app:layout_constraintTag="country"
        style="@style/YS.Text.Regular.13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@id/genre"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guide_line"/>

    <TextView
        android:id="@+id/name_of_country"
        style="@style/AudioPlayerInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Russiaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/country"
        app:layout_constraintStart_toStartOf="@id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="duration, album, year, genre, country"
        app:barrierDirection="end" />
    </androidx.constraintlayout.widget.ConstraintLayout>